# qtcreator_googletest_cmake

./: CMakeCache.txt  CMakeLists.txt  README.md
include/: seged.h
src/: CMakeLists.txt  Makefile  main.cpp  seged.cpp
tests/: CMakeLists.txt  Makefile  main.cpp  probaTests.cpp
